# simple-echo-server

./: CHANGELOG.md  Cargo.toml  README.md
docker/: Dockerfile
k8s/: deployment.yaml  service.yaml
src/: main.rs
